(test
 (name test_storage)
 (libraries ounit2 terminal_tok zarith csv)
 (deps
  (glob_files_rec ../data/*)))

(test
 (name test_recommender)
 (libraries ounit2 terminal_tok zarith csv))

(test
 (name test_encryption)
 (libraries ounit2 terminal_tok zarith csv))

(test
 (name test_json_parser)
 (libraries ounit2 terminal_tok zarith csv))
