(test
 (name test_storage)
 (modules test_storage)
 (libraries ounit2 terminal_tok zarith csv)
 (deps
  (glob_files_rec ../data/*)))

(test
 (name test_recommender)
 (modules test_recommender)
 (libraries ounit2 terminal_tok zarith csv))

(test
 (name test_encryption)
 (modules test_encryption)
 (libraries ounit2 terminal_tok zarith csv))

(test
 (name test_json_parser)
 (modules test_json_parser)
 (libraries ounit2 terminal_tok zarith csv))

(test
 (name test_cf_recommender)
 (modules test_cf_recommender)
 (libraries ounit2 terminal_tok zarith csv))

(test
 (name test_ml_recommender)
 (modules test_ml_recommender)
 (libraries ounit2 terminal_tok zarith csv))

(test
 (name test_server_utils)
 (modules test_server_utils)
 (libraries ounit2 terminal_tok zarith csv lwt)
 (preprocess
  (pps lwt_ppx)))
